--- a/team1_app/views/about.html
+++ b/team1_app/views/about.html
@@ -5,11 +5,25 @@
 	<!-- Set the page to the width of the device and set the zoon level -->
 	<meta name="viewport" content="width = device-width, initial-scale = 1">
 	<title>About Us</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	    <nav class="navbar" style="margin: 0 auto; background-color:  #ff9900" !important>
+		<div class="container-fluid">
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav nav-pills">
+					<li><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
+					<li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
+					<li class="active"><a href="/about" role="presentation">About Us</a></li>
+					 </ul>
+					</li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 	<body>
-		<h2> Olivia Chen </h2>
-		<h2> Lisa Combs  </h2>
-		<h2> Ryan Krog	 </h2>
-		<h2> Prema Roman </h2>
+		<h4> Olivia Chen </h4>
+		<h4> Lisa Combs  </h4>
+		<h4> Ryan Krog	 </h4>
+		<h4> Prema Roman </h4>
 	</body>
 </html>
