added content and d3 viz

--- a/team1_app/views/index.html
+++ b/team1_app/views/index.html
@@ -90,7 +90,9 @@
 				<li class="active"><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
 				<li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
 				<li><a href="/locationMap" role="presentation">Location Map</a></li>
-				<li><a href="/about" role="presentation">About Us</a></li>
+				<li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+				<li><a href="/project" role="presentation" >About The Project</a></li>
+				<li><a href="/about" role="presentation" >The Team</a></li>
 				 </ul>
 				</li>
 			</ul>
@@ -109,15 +111,36 @@
 <!-- <div class="jumbotron bg-success"> -->
 <!-- 	<h1 class = "text-center">The Mood of the Media</h1> -->
 <!-- </div> -->
-<nav>
 	<div class="container-fluid" style="background-color:  #339966">
-		<h1>Text Summarization Though Visualization</h1>
-		<h2>A District Data Labs Project</h2>
+		<h1 style="color: white">Text Summarization Though Visualization</h1>
+		<h2 style="color: white">A District Data Labs Project</h2>
 	</div>
-</nav>
 
 
-</div>	
+<div class="col s6 offset-s2">
+	<p style="font-size: 20px; text-indent: 50px; margin: 30px">
+	This project is a product of the <a href="http://www.districtdatalabs.com/incubator/">District Data Labs Incubator Program</a>, which helps qualified participants gain hands-on data science experience with the assistance of mentors through creating a data product. We selected our team of four individuals through our common interest in natural language processing (NLP).
+	</p>
+	<p style="font-size: 20px; text-indent: 50px; margin: 30px">
+	There were two objectives for this project: The first was to assist our mentor, Benjamin Bengfort, with creating visualizations for his <a href="https://us.pycon.org/2016/">PyCon</a> talk on May 30, 2016. The second was to create a gallery of data products proposing more interesting ways, beyond the word cloud, to visualize text data.
+	</p>
+	<div style="font-size: 20px; text-indent: 50px;">
+	Our final product is this gallery. The tabs contain:
+	<ol>
+		<li style="list-style-position: inside;">Sentiment analysis visualizations</li>
+		<li style="list-style-position: inside;">Map of geographical entities</li>
+	</ol>
+	</div>
+	
+	<div style="font-size: 20px; text-indent: 50px;">
+	Next steps:
+	<ol>
+		<li style="list-style-position: inside;">Network visualization through word associations</li>
+		<li style="list-style-position: inside;">Topic model (HDP)</li>
+	</ol>
+	</div>
+	
+</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/jquery.backstretch.js"></script>
 	<script src="js/bootstrap.min.js"></script>
