--- a/team1_app/views/locationMap/locations.html
+++ b/team1_app/views/locationMap/locations.html
@@ -43,7 +43,9 @@
         <li><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
         <li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
         <li class="active"><a href="/locationMap" role="presentation">Location Map</a></li>
-        <li><a href="/about" role="presentation">About Us</a></li>
+        <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+        <li><a href="/project" role="presentation" >About The Project</a></li>
+        <li><a href="/about" role="presentation" >The Team</a></li>
          </ul>
         </li>
       </ul>
@@ -54,8 +56,8 @@
 <!-- a small window shows on the top right corner tells you what's the coordinates of mouse position,
 could be removed, just to test if I can get coordinate while moving the mouse-->
 
-
 <div id="map" style=""></div>
+
 
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <!-- following are the scripts that using to map the basemap, and newslocation -->
