--- a/team1_app/views/about.html
+++ b/team1_app/views/about.html
@@ -16,6 +16,10 @@
 				font-family: Georgia, sans-serif; 
 		/*			   font-family: Helvetica, Arial, sans-serif; */
 			 }
+		img {
+			width: 20%;
+			height: 20%;
+		}
 /*		.nav{*/
 /*/*			height: 70px;*/*/
 /*			*/
@@ -35,7 +39,9 @@
 					<li><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
 					<li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
 					<li><a href="/locationMap" role="presentation">Location Map</a></li>
-					<li class="active"><a href="/about" role="presentation" >About Us</a></li>
+					<li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+					<li><a href="/project" role="presentation" >About The Project</a></li>
+					<li class="active"><a href="/about" role="presentation" >The Team</a></li>
 					 </ul>
 					</li>
 				</ul>
@@ -67,37 +73,52 @@
 <!-- 				</div> -->
 <!-- 			</div> -->
 <!-- 		</div> -->
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<table>
-			<tr>
-				<td>
-					<div>
-						<h4>Olivia Chen</h4>
-						<p>Insert Text</p>
-					</div>
-				</td>
-				<td>
-					<div>
-						<h4>Lisa Combs</h4>
-						<p>Insert Text</p>
-					</div>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<div>
-						<h4>Ryan Krog</h4>
-						<p>Insert Text</p>
-					</div>
-				</td>
-				<td>
-					<div>
-						<h4>Prema Roman</h4>
-						<p>Insert Text</p>
-					</div>
-				</td>
-			</tr>
-		</table>
+<!-- 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+<!-- 		<table> -->
+<!-- 			<tr> -->
+<!-- 				<td> -->
+<!--  -->
+<!-- 				</td> -->
+<!-- 				<td> -->
+<!-- 					<div> -->
+<!-- 						<h4>Lisa Combs</h4> -->
+<!-- 						<p>Insert Text</p> -->
+<!-- 					</div> -->
+<!-- 				</td> -->
+<!-- 			</tr> -->
+<!-- 			<tr> -->
+<!-- 				<td> -->
+<!-- 					<div> -->
+<!-- 						<h4>Ryan Krog</h4> -->
+<!-- 						<p>Insert Text</p> -->
+<!-- 					</div> -->
+<!-- 				</td> -->
+<!-- 				<td> -->
+<!-- 					<div> -->
+<!-- 						<h4>Prema Roman</h4> -->
+<!-- 						<p>Insert Text</p> -->
+<!-- 					</div> -->
+<!-- 				</td> -->
+<!-- 			</tr> -->
+<!-- 		</table> -->
+<!-- 		<div> -->
+			<h4>Olivia Chen</h4>
+			<a href="http://oliviac12.github.io/"><img src="/images/olivia.png"
+			alt="Olivia Chen"/></a>
+			<p style="font-size: 20px; text-indent: 50px; margin: 30px"><a href="http://oliviac12.github.io/">Olivia Chen</a> recently received her MS in statistics from American University in Washington DC. She enjoys attacking real world problems with a love of statistics and curiosity of data and she is most interested in creating clear and easily interpreted analyses which represent data truthfully. When Olivia is not on her <a href="https://twitter.com/oliviachen56">twitter</a> or solving <a href="https://github.com/oliviac12">data problems</a>, she is looking for her new favorite coffee shop/restaurant wherever she is.</p>
+		</div>
+		<div>
+			<h4>Lisa Combs</h4>
+			<a href="https://www.linkedin.com/in/combslisa"><img src="/images/lisa.JPG"
+			alt="Lisa Combs"/></a>
+			<p style="font-size: 20px; text-indent: 50px; margin: 30px"><a href="https://www.linkedin.com/in/combslisa">Lisa Combs</a> is a recent graduate of Columbia University with a B.A. in Statistics. Lisa works as a research assistant in D.C. She aspires to work as a data scientist, and has a particular interest in NLP. Apart from her curiosity in this subject area, Lisa played on the varsity golf team in college and enjoys traveling.</p>
+		</div>
+		<div>
+			<h4>Ryan Krog</h4>
+		</div>
+		<div>
+			<h4>Prema Damodaran Roman</h4>
+		</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	</body>
