--- a/team1_app/views/sentiment/sentiment.html
+++ b/team1_app/views/sentiment/sentiment.html
@@ -10,6 +10,7 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <title>Trends in Politics</title>
       <style>
             body { font-family: Georgia, sans-serif; 
                line-height: 1.3em; -webkit-font-smoothing: antialiased; 
@@ -79,7 +80,9 @@
             <li><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
             <li class="active"><a href="/sentiment" role="presentation">Trends in Politics</a></li>
             <li><a href="/locationMap" role="presentation">Location Map</a></li>
-            <li><a href="/about" role="presentation">About Us</a></li>
+            <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+            <li><a href="/project" role="presentation" >About The Project</a></li>
+            <li><a href="/about" role="presentation" >The Team</a></li>
              </ul>
             </li>
           </ul>
