added viz to team1 app; added more python scripts

--- a/team1_app/views/D3_sentiment/d3_sentiment.html
+++ b/team1_app/views/D3_sentiment/d3_sentiment.html
@@ -47,6 +47,8 @@ body {
         <li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
         <li><a href="/locationMap" role="presentation">Location Map</a></li>
         <li class="active"><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+        <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+        <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
         <li><a href="/project" role="presentation" >About The Project</a></li>
         <li><a href="/about" role="presentation" >The Team</a></li>
          </ul>
@@ -56,6 +58,6 @@ body {
   </div><!-- /.container-fluid -->
 </nav>
 </body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
 <script src="js/script.js"></script>
 <script src="js/bootstrap.min.js"></script>
