--- a/team1_app/views/about.html
+++ b/team1_app/views/about.html
@@ -40,6 +40,8 @@
 					<li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
 					<li><a href="/locationMap" role="presentation">Location Map</a></li>
 					<li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+					<li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+					<li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
 					<li><a href="/project" role="presentation" >About The Project</a></li>
 					<li class="active"><a href="/about" role="presentation" >The Team</a></li>
 					 </ul>
@@ -115,6 +117,11 @@
 		</div>
 		<div>
 			<h4>Ryan Krog</h4>
+			<a href="http://ryankrog.org"><img src="/images/ryan.jpg"
+			alt="Ryan Krog"/></a>
+			<p style="font-size: 20px; text-indent: 50px; margin: 30px">
+			<a href="http://ryankrog.org">Ryan Krog</a> is a data scientist at Navy Federal Credit Union in Vienna, VA, where he works in the Member Research &and; Intelligence Division. He works with internal clients to help solve their business problems through analytics, predictive modeling, market segmentation, and business strategy. In his spare time, Ryan is finishing his Ph.D. in the Department of Political Science at George Washington University, where he focuses on decision-making by Justices on the U.S. Supreme Court by examining statistical patterns in their rulings.
+			</p>
 		</div>
 		<div>
 			<h4>Prema Damodaran Roman</h4>
