--- a/team1_app/views/index.html
+++ b/team1_app/views/index.html
@@ -82,7 +82,7 @@
 <!-- <nav class="navbar navbar-default" style="margin: 0 auto;"> -->
 
 <!-- <div class="header"><h1>The Mood of the Media</h1></div> -->
-<nav class="navbar" style="margin: 0 auto; background-color: #3366ff" !important>
+<nav class="navbar" style="margin: 0 auto; background-color: #3399ff" !important>
 	<div class="container-fluid">
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -91,6 +91,8 @@
 				<li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
 				<li><a href="/locationMap" role="presentation">Location Map</a></li>
 				<li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+				<li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+				<li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
 				<li><a href="/project" role="presentation" >About The Project</a></li>
 				<li><a href="/about" role="presentation" >The Team</a></li>
 				 </ul>
