--- a/team1_app/views/locationMap/locations.html
+++ b/team1_app/views/locationMap/locations.html
@@ -44,6 +44,8 @@
         <li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
         <li class="active"><a href="/locationMap" role="presentation">Location Map</a></li>
         <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+        <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+        <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
         <li><a href="/project" role="presentation" >About The Project</a></li>
         <li><a href="/about" role="presentation" >The Team</a></li>
          </ul>
@@ -58,15 +60,11 @@ could be removed, just to test if I can get coordinate while moving the mouse-->
 
 <div id="map" style=""></div>
 
-<<<<<<< Updated upstream
 
-<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-=======
 <script src="https://cdn.jsdelivr.net/leaflet/1.0.0-rc.1/leaflet.js"></script>
->>>>>>> Stashed changes
 <!-- following are the scripts that using to map the basemap, and newslocation -->
 <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
-<script src="newsLocation.js"></script>
+<script src="js/newsLocation.js"></script>
 
 
 <script>
