--- a/team1_app/views/project.html
+++ b/team1_app/views/project.html
@@ -14,7 +14,7 @@
 			 }
 	</style>
 	</head>
-	<nav class="navbar" style="margin: 0 auto; background-color:  #669900" !important>
+	<nav class="navbar" style="margin: 0 auto; background-color:  #ff4d94" !important>
 		<div class="container-fluid">
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav nav-pills centered-pills">
@@ -22,6 +22,8 @@
 					<li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
 					<li><a href="/locationMap" role="presentation">Location Map</a></li>
 					<li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+					<li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+					<li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
 					<li class="active"><a href="/project" role="presentation" >About The Project</a></li>
 					<li><a href="/about" role="presentation" >The Team</a></li>
 					 </ul>
