--- a/team1_app/views/sentiment/sentiment.html
+++ b/team1_app/views/sentiment/sentiment.html
@@ -48,27 +48,7 @@
             .poli {
                     font-family: arial;
                     font-size: 20px;
-/*                    color: white;*/
                   }  
-/*            div {*/
-/*              position: relative;*/
-/*            }*/
-/*            div iframe {*/
-/*              display: block;*/
-/*              position: relative;*/
-/*              z-index: 1;*/
-/*            }*/
-/*            div::before {*/
-/*              background-color: rgba(255,255,255,.5);*/
-/*              content: '';*/
-/*              position: absolute;*/
-/*              z-index: 2;*/
-/*              box-shadow: inset 0px 11px 8px -10px black, inset 0px -11px 8px -10px black;*/
-/*              top: 0;*/
-/*              right: 0;*/
-/*              bottom: 0;*/
-/*              left: 0;*/
-/*            }*/
         </style>
     </head>
 
@@ -81,6 +61,8 @@
             <li class="active"><a href="/sentiment" role="presentation">Trends in Politics</a></li>
             <li><a href="/locationMap" role="presentation">Location Map</a></li>
             <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+            <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+            <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
             <li><a href="/project" role="presentation" >About The Project</a></li>
             <li><a href="/about" role="presentation" >The Team</a></li>
              </ul>
