--- a/team1_app/views/sentiment/Sanders.html
+++ b/team1_app/views/sentiment/Sanders.html
@@ -20,6 +20,8 @@
             <li class="active"><a href="/sentiment" role="presentation">Trends in Politics</a></li>
             <li><a href="/locationMap" role="presentation">Location Map</a></li>
             <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
+            <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+            <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
             <li><a href="/project" role="presentation" >About The Project</a></li>
             <li><a href="/about" role="presentation" >The Team</a></li>
              </ul>
