--- a/team1_app/views/about.html
+++ b/team1_app/views/about.html
@@ -125,6 +125,8 @@
 		</div>
 		<div>
 			<h4>Prema Damodaran Roman</h4>
+			<a><img src="/images/prema.jpg"
+			alt="Prema Roman"/></a>
 		</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
