modified visualizations on team 1 app

--- a/team1_app/views/baleen_feeds.html
+++ b/team1_app/views/baleen_feeds.html
@@ -2,8 +2,13 @@
 <head>
 <meta charset="utf-8">
 <title>Baleen Feeds</title>
-<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+<!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
+<link href="css/bootstrap.css" rel="stylesheet">
 <style>
+body { font-family: Georgia, sans-serif;
+  padding: 70px;
+/*			   font-family: Helvetica, Arial, sans-serif; */
+ }
 
 .node circle {
   fill: #fff;
@@ -23,17 +28,17 @@
 
 </style>
 </head>
-<nav class="navbar" style="margin: 0 auto; background-color: #cc9900" !important>
+	<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav nav-pills">
         <li><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
-        <li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
-        <li><a href="/locationMap" role="presentation">Location Map</a></li>
-        <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
-        <li  class="active"><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
-        <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
+<!--         <li><a href="/sentiment" role="presentation">Trends in Politics</a></li> -->
+<!--         <li><a href="/locationMap" role="presentation">Location Map</a></li> -->
+<!--         <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li> -->
+<!--         <li  class="active"><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li> -->
+<!--         <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li> -->
         <li><a href="/project" role="presentation" >About The Project</a></li>
         <li><a href="/about" role="presentation" >The Team</a></li>
          </ul>
