--- a/team1_app/views/D3_sentiment/d3_sentiment.html
+++ b/team1_app/views/D3_sentiment/d3_sentiment.html
@@ -4,7 +4,18 @@
 <title>Sentiment Across Categories</title>
 <!-- Example based on http://bl.ocks.org/mbostock/3887118 -->
 <!-- Tooltip example from http://www.d3noob.org/2013/01/adding-tooltips-to-d3js-graph.html -->
-	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+<!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
+<link href="css/bootstrap.css" rel="stylesheet">
+<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+<!--[if IE]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<style>
+		body { font-family: Georgia, sans-serif;
+					padding: 70px;
+		 }
+</style>
+
 <style>
 #pieChart {
 	position:absolute;
@@ -14,11 +25,10 @@
 	height: 400px;
 }
 
-body {
-
-
-  font: 11px sans-serif;
-}
+body { font-family: Georgia, sans-serif;
+	padding: 70px;
+/*			   font-family: Helvetica, Arial, sans-serif; */
+ }
 
 .axis path,
 .axis line {
@@ -39,16 +49,16 @@ body {
 }
 </style>
 <body>
-<nav class="navbar" style="margin: 0 auto; background-color:  #669900" !important>
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav nav-pills centered-pills">
         <li><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
-        <li><a href="/sentiment" role="presentation">Trends in Politics</a></li>
-        <li><a href="/locationMap" role="presentation">Location Map</a></li>
-        <li class="active"><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
-        <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
-        <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
+<!--         <li><a href="/sentiment" role="presentation">Trends in Politics</a></li> -->
+<!--         <li><a href="/locationMap" role="presentation">Location Map</a></li> -->
+<!--         <li class="active"><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li> -->
+<!--         <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li> -->
+<!--         <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li> -->
         <li><a href="/project" role="presentation" >About The Project</a></li>
         <li><a href="/about" role="presentation" >The Team</a></li>
          </ul>
@@ -59,5 +69,6 @@ body {
 </nav>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/script.js"></script>
 <script src="js/bootstrap.min.js"></script>
