--- a/team1_app/views/sentiment/Trump.html
+++ b/team1_app/views/sentiment/Trump.html
@@ -5,24 +5,30 @@
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="css/dropdown.css"  media="screen,projection"/>
+      <link href="css/bootstrap.css" rel="stylesheet">
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Donald Trump</title>
+      <style>
+          body { font-family: Georgia, sans-serif;
+                padding: 70px;
+           }
+      </style>
     </head>
-    <nav class="navbar" style="margin: 0 auto; background-color: #990033" !important>
+    <nav class="navbar navbar-default navbar-fixed-top" >
       <div class="container-fluid">
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <!-- 			<ul class="nav navbar-nav"> -->
           <ul class="nav nav-pills" style="background-color: white; color: blue">
             <li><a href="/">Home<span class="sr-only" role="presentation"></span></a></li>
-            <li class="active"><a href="/sentiment" role="presentation">Trends in Politics</a></li>
-            <li><a href="/locationMap" role="presentation">Location Map</a></li>
-            <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li>
-            <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li>
-            <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li>
+<!--             <li class="active"><a href="/sentiment" role="presentation">Trends in Politics</a></li> -->
+<!--             <li><a href="/locationMap" role="presentation">Location Map</a></li> -->
+<!--             <li><a href="/d3sentiment" role="presentation" >Sentiment Across Categories</a></li> -->
+<!--             <li><a href="/freqWords" role="presentation" >Frequently Appearing Words</a></li> -->
+<!--             <li><a href="/baleenFeeds" role="presentation" >Baleen Feeds</a></li> -->
             <li><a href="/project" role="presentation" >About The Project</a></li>
             <li><a href="/about" role="presentation" >The Team</a></li>
              </ul>
@@ -41,25 +47,25 @@
 <!--     <li><a  href="/Sanders">Bernie Sanders</a></li> -->
 <!--     <li><a  href="/Trump">Donald Trump</a></li> -->
 <!--     </ul> -->
-    <nav>
+    <!-- <nav>
       <div class="nav-wrapper lighten-2" style="background-color: #6600CC">
         <a href="#!" class="brand-logo">PoliTrend</a>
-<!--         <ul class="right hide-on-med-and-down"> -->
+<!         <ul class="right hide-on-med-and-down"> -->
           <!-- Dropdown Trigger -->
 <!--           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Pick A Candidate<i class="material-icons right" style="background-color: #6600CC">arrow_drop_down</i></a></li> -->
 <!--         </ul> -->
-      </div>
-    </nav>
+      <!-- </div>  -->
+    <!-- </nav> -->
 
     <div class="row">
     <div class="col s6 offset-s2">
       <p>
-       
- 
+
+
       </p>
     </div>
     </div>
-    
+
     <!-- to get the dropdown at the top, just switch the order -->
       <!-- dropdown -->
       <div class="row">
@@ -73,7 +79,7 @@
       </li>
     </ul>
       </div>
-      </div>  
+      </div>
 
     <!-- graph -->
     <div class="row">
@@ -87,5 +93,3 @@
       <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
   </html>
-        
-
