added sports viz

--- a/team1_app/views/index.html
+++ b/team1_app/views/index.html
@@ -136,6 +136,8 @@
 		<script src="js/sentiment_politics.js"></script>
 		<h4 style="text-align:center;">Business</h4>
 		<script src="js/sentiment_business.js"></script>
+		<h4 style="text-align:center;">Sports</h4>
+		<script src="js/sentiment_sports.js"></script>
 		<p>
 		 Text analysis can yield insterestng results when implemented for a particular purpose. In this <a href="/sentiment">case study</a> we analyzed our new and politics corpus to determine trands in politics.
 		</p>
